[tool.poetry]
name = "stixorm"
version = "0.1.0"
description = "Description"
repository = "https://github.com/os-threat/Stix-ORM"
homepage = "https://github.com/os-threat/Stix-ORM"
authors = [
    "Brett Forbes <brett@cloudaccelerator.co>"
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/os-threat/Stix-ORM/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
stix2 = "^3.0.1"
networkx = "^3.5"
pydantic = "^2.11.5"
loguru = "^0.7.3"
validators = "^0.35.0"
typedb-driver = "2.25.6"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
flake8 = "^7.2.0"
pyhamcrest = "^2.1.0"
black = "^25.1.0"
flake8-html = "^0.4.3"
pytest-html = "^4.1.1"
pytest-bdd-html = "^0.1.14a0"
bandit = "^1.8.3"
pytest-xdist = "^3.7.0"
pytest-cov = "^6.1.1"
pyinstrument = "^5.0.2"
import-linter = "^2.5.2"
pydeps = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"